k8s-seft-manager-aws-v2-istio/manifests/mainfest/movie-web-frontend/frontend/frontend-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-web-frontend-v1 
  namespace: movie-web
  labels:
    app: movie-web-frontend 
    version: v1
spec:
  revisionHistoryLimit: 10 
  replicas: 1
  selector:
    matchLabels:
      app: movie-web-frontend 
      version: v1
  template:
    metadata:
      labels:
        app: movie-web-frontend 
        version: v1
    spec:
      serviceAccountName: movie-web-frontend
      containers:
        - name: movie-web-frontend 
          image: dev.nhatanhdevops.website/onlineshop/movie-web-frontend-production:v2_562a4d5f
          ports:
            - containerPort: 80
              protocol: TCP  
          resources:
            requests:
              memory: "256Mi"
      imagePullSecrets:
        - name: auth-registry
