k8s-seft-manager-aws-v2-istio/manifests/mainfest/movie-web-frontend/frontend/frontend-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: movie-web-frontend-rule
  namespace: movie-web
spec:
  host: k8s-movie-web-frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
